RESOLVED FIXED177035
[Harfbuzz] Test fast/text/complex-text-selection.html is failing since r222090
https://bugs.webkit.org/show_bug.cgi?id=177035
Summary [Harfbuzz] Test fast/text/complex-text-selection.html is failing since r222090
Carlos Garcia Campos
Reported 2017-09-16 02:07:00 PDT
The problem was not actually introduced in r222090, but revelaed by that change. The bug was added in r222086, when adding the support for shaping a range of characters. We are not correctly filtering the characters in case of rtl in some cases.
Attachments
Patch (2.27 KB, patch)
2017-09-16 02:09 PDT, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2017-09-16 02:09:31 PDT
Carlos Garcia Campos
Comment 2 2017-09-17 01:07:08 PDT
Radar WebKit Bug Importer
Comment 3 2017-09-27 12:29:30 PDT
Note You need to log in before you can comment on or make changes to this bug.