[Harfbuzz] Test fast/text/complex-text-selection.html is failing since r222090 https://bugs.webkit.org/show_bug.cgi?id=177035

Reviewed by Michael Catanzaro.

The problem was not actually introduced in r222090, but revelaed by that change. The bug was added in r222086,
when adding the support for shaping a range of characters. We are not correctly filtering the characters in case
of rtl in some cases.

Fixes: fast/text/complex-text-selection.html

* platform/graphics/harfbuzz/HarfBuzzShaper.cpp:
(WebCore::HarfBuzzShaper::fillGlyphBufferFromHarfBuzzRun): When checking if the current character is inside
the given range, continue or break the loop depending on whether text is rtl or not.

Canonical link: https://commits.webkit.org/193454@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222132 268f45cc-cd09-0410-ab3c-d52691b4dbfc